# ipotenusa

./: ipotenusa.cabal  stack.yaml
app/: Main.hs
src/: Lib.hs
